[package]
name = "rustro_arch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.19.0"
winit = "0.26.0"
font-kit = "0.7.0"
libloading = "0.7.0"
libc = "0.2"
libretro-sys = "0.1.1"
clap = "2.33.3"
rand = "0.8.4"
rodio = "0.17.1"
gilrs = "0.10.1"
